k8s/apps/default/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
