k8s/apps/default/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
spec:
  ingressClassName: internal
  rules:
    - host: &host readarr.holywoo.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  name: http
  tls:
    - hosts:
        - *host
